deepspeed train multiprocess

--- a/configs/Kinetics/MVIT_B_32x3_CONV.yaml
+++ b/configs/Kinetics/MVIT_B_32x3_CONV.yaml
@@ -1,10 +1,14 @@
 TRAIN:
-  ENABLE: True
   DATASET: kinetics
   BATCH_SIZE: 1
   EVAL_PERIOD: 10
   CHECKPOINT_PERIOD: 10
-  AUTO_RESUME: True
+  AUTO_RESUME: False
+  CHECKPOINT_FILE_PATH: model_zoo/mvit/K400_MVIT_B_32x3_CONV.pyth
+  CHECKPOINT_EPOCH_RESET: True
+TEST:
+  BATCH_SIZE: 1
+  CHECKPOINT_FILE_PATH: model_zoo/mvit/K400_MVIT_B_32x3_CONV.pyth
 DATA:
   PATH_TO_DATA_DIR: data/kinetics400
   USE_OFFSET_SAMPLING: True
@@ -56,18 +60,14 @@ MIXUP:
   SWITCH_PROB: 0.5
 SOLVER:
   BASE_LR_SCALE_NUM_SHARDS: True
-  BASE_LR: 1e-4
-  CLIP_GRAD_L2NORM: 1.0
   LR_POLICY: cosine
   COSINE_AFTER_WARMUP: True
   COSINE_END_LR: 1e-6
   MAX_EPOCH: 200
   WARMUP_EPOCHS: 30.0
-  MOMENTUM: 0.9
-  WEIGHT_DECAY: 5e-2
-  ZERO_WD_1D_PARAM: True
   WARMUP_START_LR: 1e-6
-  OPTIMIZING_METHOD: adamw
+  MOMENTUM: 0.9
+  ZERO_WD_1D_PARAM: True
 MODEL:
   NUM_CLASSES: 400 # or 600 for K600
   ARCH: mvit
@@ -84,4 +84,4 @@ DATA_LOADER:
   PIN_MEMORY: True
 NUM_GPUS: 1
 RNG_SEED: 0
-OUTPUT_DIR: .
+OUTPUT_DIR: outputs/k400_mvit_32x3
