--- a/configs/Kinetics/MVIT_B_32x3_CONV.yaml
+++ b/configs/Kinetics/MVIT_B_32x3_CONV.yaml
@@ -9,6 +9,9 @@ TRAIN:
 TEST:
   BATCH_SIZE: 1
   CHECKPOINT_FILE_PATH: model_zoo/mvit/K400_MVIT_B_32x3_CONV.pyth
+  NUM_GPUS: 1
+  USE_DEEPSPEED_CKPT: True
+  CKPT_JSON_FILE: ""
 DATA:
   PATH_TO_DATA_DIR: data/kinetics400
   USE_OFFSET_SAMPLING: True
